# matrix

./: .gitignore  CMakeLists.txt  README.md  build_linux_x86.sh
cmake/: gtest.cmake
develop/: CMakeLists.txt  Log.cpp
develop/matrix/: Matrix.cpp
develop/tensor/: Tensor.cpp
include/: Iterators.h  Log.h  Log.hpp  Meta.hpp  Shape.hpp  Type.hpp  Utils.h  matrix.h
include/matrix/: Matrix.h  Operator.h  Shape.hpp
include/tensor/: Tensor.hpp
python/: CMakeLists.txt  REMARE.md  setup.sh
python/src/: main.cpp
test/: CMakeLists.txt  Matrix.cpp  Operator.cpp  Shape.cpp  benchmark.cpp  test_meta.cpp  test_shape.cpp
