CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(matrix)

SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_BUILD_TYPE "DEBUG")
SET(CMAKE_CXX_FLAGS "-std=c++11 -march=native -O3")
SET(CMAKE_COMPILE_WARNING_AS_ERROR ON)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build/lib)

####### INCLUDE #######
INCLUDE_DIRECTORIES(
        ${PROJECT_SOURCE_DIR}/include
)

####### SOURCES (Projects) #######
# INCLUDE_DIRECTORIES(
#         #${PROJECT_SOURCE_DIR}/develop
#         ${PROJECT_SOURCE_DIR}/develop/*cpp
# )
ADD_SUBDIRECTORY(develop)

####### LIBS #######
# thirdparty
SET(THIRD_PARTY_LIBS
    #${OpenCV_LIBS}
    #${EIGEN3_LIBS}
)

# INTERNAL LIBS #
SET(MATRIX_LIBS matrix)

####### BUILDING MIAN #######
ADD_SUBDIRECTORY(test)

####### INSTALL PYTHON#######
INSTALL(DIRECTORY  
    ${PROJECT_SOURCE_DIR}/python DESTINATION ${PROJECT_SOURCE_DIR}/build)